--- a/src/App.css
+++ b/src/App.css
@@ -1,70 +1,75 @@
-/* .App{
-  position: absolute;
-  min-width: 100%;
-  min-height: 100%;
-  top: 0;
-  left:0;
-  background-size: cover;
-} */
-.nothing{
+.nothing {
   height: 10vh;
   width: 100vh;
 }
-.card{
-  background: linear-gradient(to right,#232526 , #414345);;
+.card {
+  background: rgba(39, 37, 37, 0.5);
   position: relative;
   height: 70vh;
   width: 60vh;
-  left:50%;
+  left: 50%;
   transform: translatex(-50%);
-  opacity: 0.6;
-  box-shadow: black 1px,1px,2px;
+  border-radius: 20px;
 }
-.cardIMG{
-  opacity: 1;
+.cardIMG {
   position: relative;
   width: 50%;
   left: 50%;
   transform: translateX(-50%);
 }
-.location{
+
+.alert {
+  margin-top: 100px;
+  text-align: center;
+}
+
+.location {
+  text-transform: capitalize;
   position: relative;
   text-align: center;
+  font-weight: 900;
+  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
   left: 50%;
   transform: translateX(-50%);
-  opacity: 1;
   font-family: sans-serif;
-  font-weight: bold;
-  color: white;
+  color: #fff;
   font-size: 55px;
-  text-shadow: black ,2px,2px,2px;
 }
-.temp{
+
+.card-text {
+  padding: 10px;
+  text-align: center;
+}
+
+.temp {
   position: relative;
+  display: inline-block;
+  margin: 30px, auto;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 20px;
+  padding: 15px 25px;
+  color: #fff;
+  font-size: 102px;
+  font-weight: 900;
+  text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+}
+.weather {
+  position: relative;
+  top: 30px;
   text-align: center;
   font-size: 40px;
   font-weight: bold;
   color: white;
-  text-shadow: black ,2px,2px,2px;
+  text-shadow: black, 2px, 2px, 2px;
 }
-.weather{
-  position: relative;
-  top:30px;
-  text-align: center;
-  font-size: 40px;
-  font-weight: bold;
-  color: white;
-  text-shadow: black ,2px,2px,2px;
+.card:hover {
+  background: rgba(39, 37, 37, 0.7);
 }
-.card:hover{
-  opacity: 0.8;
-  box-shadow: black 3px,3px,3px;
-}
-.form{
+.form {
   position: relative;
   top: 60px;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   transition: all 1s;
   width: 50px;
   height: 50px;
@@ -75,11 +80,11 @@
   padding: 5px;
 }
 
-input{
+input {
   position: relative;
   top: 0;
   left: 0;
-  width: 100%;;
+  width: 100%;
   height: 42.5px;
   line-height: 30px;
   outline: 0;
@@ -91,7 +96,7 @@ input{
   text-align: center;
 }
 
-.fa{
+.fa {
   box-sizing: border-box;
   padding: 10px;
   width: 42.5px;
@@ -106,16 +111,16 @@ input{
   transition: all 1s;
 }
 
-.form:hover{
+.form:hover {
   width: 200px;
   cursor: pointer;
 }
 
-.form:hover input{
+.form:hover input {
   display: block;
 }
 
-.form:hover .fa{
+.form:hover .fa {
   background: #07051a;
   color: white;
 }
