--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,11 @@
   height: 10vh;
   width: 100vh;
 }
+.row{
+  position: relative;
+}
 .card {
   background: rgba(39, 37, 37, 0.5);
-  position: relative;
-  height: 70vh;
-  width: 60vh;
-  left: 50%;
-  transform: translatex(-50%);
   border-radius: 20px;
 }
 .cardIMG {
@@ -62,6 +60,9 @@
 .card:hover {
   background: rgba(39, 37, 37, 0.7);
 }
+.search-box{
+  position: relative;
+}
 .form {
   position: relative;
   top: 60px;
@@ -69,7 +70,7 @@
   transform: translate(-50%, -50%);
   transition: all 1s;
   width: 50px;
-  height: 50px;
+  height: 60px;
   background: white;
   box-sizing: border-box;
   border-radius: 25px;
@@ -123,6 +124,14 @@ input {
 }
 
 .react-card-flipper {
-  position: absolute;
-  left: 37%; 
+  position: relative;
+  
+}
+.col-sm-4{
+  position: relative;
+  left: 50%;
+  transform:translateX(-50%);
+}
+.row{
+      padding: 50px;
 }
